# NASTRAN-95

./: .gitignore  README.md
.github/workflows/: release.yml
pynastran95/: .gitignore  PLAN.md  README.md  hatch_build.py  pyproject.toml
pynastran95/docs/: api-reference.md  getting-started.md
pynastran95/src/pynastran95/: __init__.py  models.py  parser.py  runner.py
pynastran95/src/pynastran95/_data/: __init__.py
pynastran95/src/pynastran95/_fortran/: __init__.py  build_ext.py  exit_override.c  nastran_entry.f
pynastran95/tests/: conftest.py  test_f2py.py  test_parser.py  test_pynastran_integration.py  test_runner.py
test/: run_nastran.sh  test_struct2.out
