[project]
name = "pynastran95"
version = "0.1.0"
description = "Python wrapper for NASTRAN-95 finite element analysis"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pyright>=1.1",
    "pre-commit>=3.0",
]
pynastran = [
    "pyNastran>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that run NASTRAN (may take several seconds)",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
