[project]
name = "pynastran95"
version = "0.2.0"
description = "Python wrapper for NASTRAN-95 finite element analysis"
requires-python = ">=3.12"
license = "NASA-1.3"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Fortran",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pyright>=1.1",
    "pre-commit>=3.0",
]
pynastran = [
    "pyNastran>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that run NASTRAN (may take several seconds)",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/pynastran95"]

[tool.hatch.build.targets.wheel]
packages = ["src/pynastran95"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# ── cibuildwheel ───────────────────────────────────────────────────────
[tool.cibuildwheel]
build = ["cp312-manylinux_x86_64", "cp313-manylinux_x86_64", "cp312-win_amd64", "cp313-win_amd64"]
test-requires = ["pytest"]
test-command = "python -c \"import pynastran95; from pynastran95._data import get_executable; exe = get_executable(); assert exe is not None, 'bundled binary missing'; print(f'pynastran95 {pynastran95.__version__} - binary at {exe}')\""

[tool.cibuildwheel.linux]
# Install gfortran + make, then compile nastrn once (before-all runs once per
# container). The hatch build hook copies build/nastrn into each wheel instead
# of recompiling per Python version.
before-all = [
    "yum install -y gcc-gfortran make || apk add gfortran make || (apt-get update && apt-get install -y gfortran make)",
    "make -C build",
]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} || cp {wheel} {dest_dir}/"

[tool.cibuildwheel.windows]
before-all = [
    "choco install mingw -y",
    "mingw32-make -C build FC=gfortran",
]
